--- a/css/site.css
+++ b/css/site.css
@@ -1,17 +1,28 @@
 body {
-    background-color: #eaeaeb;
+
+    /* CSS3 gradient obtained from https://codepen.io/fox_hover/pen/KgwYJy */
+    background: 
+    radial-gradient(transparent 3px, transparent 4px),
+    radial-gradient(transparent 3px, transparent 4px),
+    linear-gradient(#e0e0e0 4px, transparent 0),
+    linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+    linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+  #e0e0e0;
+    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
+     background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+
+
     margin: 0;
     padding: 0;
     font-family: 'Work Sans';
 }
 
-p, ul { margin: 0; padding: 0}
+p, ul { line-height:25px; text-align: justify; padding: 0}
 
 .main-container {
     background-color: #ffffff;
     margin: auto;
-    width: 1200px;
-    height: 100vh;
+    width: 70%;
     border-left: 1px solid #b5b5b5;
     border-right: 1px solid #b5b5b5;
     display: flex;
@@ -23,6 +34,8 @@ p, ul { margin: 0; padding: 0}
     display: flex;
     flex-direction: column;
     margin: auto;
+    height: 100vh;
+    justify-content: center;
 }
 
 .name-and-info {
@@ -61,21 +74,19 @@ p, ul { margin: 0; padding: 0}
 .info-wrapper {
     display: none; 
     height: inherit;
-    width: inherit;
 }
 
 .page-header {
     display: grid;
     align-items: center;
     height: 50px;
-    width: 1    ;
     border-bottom: 1px solid black;
 }
 
 .header-name {
     grid-row: 1;
     margin-left: 12px;
-    font-size: 32px;
+    font-size: 36px;
 }
 
 .contact-container {
@@ -123,6 +134,10 @@ p, ul { margin: 0; padding: 0}
 }
 .header-col-3 { grid-column: 3;}
 
+.section-header {
+    margin-bottom: 30px;
+}
+
 .section-header span:nth-child(odd) {
     border-top: 1px solid #474747;
     height: 1px;
@@ -143,14 +158,27 @@ p, ul { margin: 0; padding: 0}
 
 .skills-wrapper {
     display: flex;
+    flex-direction: column;
+    align-self: center;
 }
 
 .skill-category {
-   margin: 0px 10px; 
+   display: grid;
+   grid-template-columns: 52px auto; 
+   grid-column-gap: 10px;
+   margin: 5px 10px; 
+}
+
+.skill-category-icon {
+    width: 52px;
+    height: 52px;
+    grid-column: 1;
+    grid-row: 1 / span 2;
 }
 
 .skill-category-header {
     font-weight: bold;
+    align-self: end;
 }
 
 .skill-list {
@@ -160,7 +188,8 @@ p, ul { margin: 0; padding: 0}
 }
 
 .skill-list li {
-    margin: 4px 0px;
+    float: left;
+    margin-right: 5px;
 }
 
 .projects-section {
@@ -177,7 +206,8 @@ p, ul { margin: 0; padding: 0}
 
 .project-title {
     text-align: center;
-    font-size: 20px;
+    font-size: 23px;
+    margin-bottom: 15px;
 }
 
 .project {
@@ -190,6 +220,11 @@ p, ul { margin: 0; padding: 0}
 .prj-2 { grid-column: 2;}
 
 .project-gallery {
-    background: gray;
-    height: 50px;
+    background: rgb(41, 41, 41);
+    padding: 5px;
+}
+
+.project-img {
+    max-width: 100%;
+    height: auto;    
 }
