--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,4 @@
 body {
-
     /* CSS3 gradient obtained from https://codepen.io/fox_hover/pen/KgwYJy */
     background: 
     radial-gradient(transparent 3px, transparent 4px),
@@ -35,7 +34,7 @@ a:hover { color: #001f3f; }
     overflow-x: hidden;
 }
 
-
+/* Ahead are styles for the landing page.*/
 #landing-container {
     display: flex;
     flex-direction: column;
@@ -105,13 +104,33 @@ a:hover { color: #001f3f; }
     transition: width 1s, opacity 1s;
 }
 
-
 #jtitle {
     opacity: 0;
     height: 0px;
     transition: opacity 1s, height 1s;
 }
 
+#scroll-memo {
+    opacity: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    font-weight: bold;
+    text-align: center;
+    transition: opacity 1s;
+    animation-name: float;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes float {
+    0% { transform: translateY(0%); }
+    50% { transform: translateY(-25%); }
+    100% { transform: translateY(0%); }
+}
+
+/* Ahead are styles for the main information page */
 #info-page-container {
     height: inherit;
     opacity: 0;
@@ -125,7 +144,7 @@ a:hover { color: #001f3f; }
     border-bottom: 1px solid black;
 }
 
-.header-fixed-border {
+.header-border-fixed {
     position: fixed;
     display: grid;
     height: 68px;
@@ -190,6 +209,13 @@ a:hover { color: #001f3f; }
 .section-header {
     display: grid;
     grid-template-columns: auto max-content auto;
+    margin-bottom: 30px;
+}
+
+.section-header span:nth-child(odd) {
+    border-top: 1px solid #474747;
+    height: 1px;
+    align-self: center;
 }
 
 .header-col-1 { grid-column: 1;}
@@ -200,16 +226,6 @@ a:hover { color: #001f3f; }
     font-weight: bold;
 }
 .header-col-3 { grid-column: 3;}
-
-.section-header {
-    margin-bottom: 30px;
-}
-
-.section-header span:nth-child(odd) {
-    border-top: 1px solid #474747;
-    height: 1px;
-    align-self: center;
-}
 
 .profile-section {
     margin: 30px 40px;
@@ -310,8 +326,54 @@ a:hover { color: #001f3f; }
     text-align: center;
 }
 
+.footer-msg {
+    font-size: 13px;
+    margin: 5px;
+}
+
+#dropdown-msg {
+    display: none;
+    width: 300px;
+    height: 40px;
+    position: fixed;
+    margin: 0px auto;
+    right: 0;
+    left: 0;
+    top: 110px;
+    background: #f3f3f3;    
+    border-radius: 3px;
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center;
+
+    transform: translateY(-200%);
+    opacity: 0;
+    transition: transform 1s, opacity 1s;
+}
+
 /* MEDIA QUERIES GO UNDER HERE */
-/* 1024px wide */
+@media only screen and (max-width: 1380px) {
+    .name-and-info {
+        flex-direction: column;
+    }
+    
+    #name-big {
+        margin: 0;
+        padding: 19px 0px;
+    }
+
+    .name-half, #info-big {
+        text-align: center;
+    }
+
+    #info-big {
+        margin: 15px 0px;
+    }
+
+    #landing-img {
+        display: block;
+    }
+}
 @media only screen and (max-width: 1025px) {
     .detailed-info-container, .projects-container {
         display: flex;
@@ -323,7 +385,7 @@ a:hover { color: #001f3f; }
     }
 
     .header-name {
-        font-size: 3.5vw;
+        font-size: 3vw;
     }
 
     .skills-wrapper { width: 100%; }
@@ -346,9 +408,9 @@ a:hover { color: #001f3f; }
 } 
 
 @media only screen and (max-width: 676px) {
-    .main-container, .header-fixed-border, .header-contents { width: 100%; }
+    .main-container, .header-border-fixed, .header-contents { width: 100%; }
 
-    .header-name { font-size: 4vw; }
+    .header-name { font-size: 4vw;}
 
     .contact-icon {
         width: 26px;
@@ -372,29 +434,6 @@ a:hover { color: #001f3f; }
 
     .name-and-info {
         margin: 0;
-    }
-}
-
-@media only screen and (max-width: 1380px) {
-    .name-and-info {
-        flex-direction: column;
-    }
-    
-    #name-big {
-        margin: 0;
-        padding: 19px 0px;
-    }
-
-    .name-half, #info-big {
-        text-align: center;
-    }
-
-    #info-big {
-        margin: 15px 0px;
-    }
-
-    #landing-img {
-        display: block;
     }
 }
 
